fix alignment of the widget header action links

--- a/static/css/tc.gam.main.css
+++ b/static/css/tc.gam.main.css
@@ -3292,20 +3292,20 @@ span.vertical-align-middle-hack {
     border-bottom: 1px solid #E6E6E3;
     margin: 0 0 12px;
     min-height: 25px;
+    padding: 5px 10px;
     position: relative;
 }
 
 .project .midlands .box > .hd {
     width: 260px;
-    height:42px;
 }
 
 .project .midlands .box > .hd h2 {
-    padding:10px;
+    position: absolute;
 }
 
 .project .midlands .east .box > .hd {
-    width: 640px
+    width: 640px;
 }
 
 some_nowhitespace {
